creation of an expense in the db is working